force-app/main/default/objects/Consultant__c/fields/Eligible_for_Raise__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Raise__c</fullName>
    <formula>IF(  ISPICKVAL(Type__c, &quot;Employee&quot;) &amp;&amp;  Salary__c &gt; 10000 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Raise</label>
    <type>Checkbox</type>
</CustomField>