force-app/main/default/objects/Consultant__c/fields/Experiance__c.field-meta.xml
<CustomField>
    <fullName>Experiance__c</fullName>
    <formula>(Today() - Date_Of_Joining__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experiance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>