force-app/main/default/objects/Consultant__c/fields/Promotion_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Eligibility__c</fullName>
    <formula>IF( (ISPICKVAL( Type__c , &quot;Employee&quot;) &amp;&amp;  Salary__c &gt;10000) ||  (ISPICKVAL( Type__c , &quot;Vendor&quot;) &amp;&amp;  Salary__c &lt; 10000 ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Eligibility</label>
    <type>Checkbox</type>
</CustomField>