force-app/main/default/objects/Consultant__c/fields/Salary_Band__c.field-meta.xml
<CustomField>
    <fullName>Salary_Band__c</fullName>
    <formula>IF( Salary__c  &gt; 10000, &quot;Band A&quot;, &quot;Band B&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Band</label>
    <type>Text</type>
</CustomField>