force-app/main/default/objects/Consultant__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Consultant__c.Type__c</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Consultant__c</referenceTo>
    <relationshipLabel>Consultants</relationshipLabel>
    <relationshipName>Consultants</relationshipName>
    <type>Lookup</type>
</CustomField>