force-app/main/default/objects/Consultant__c/validationRules/IsNullValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>IsNullValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email__c)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>email no cannot be blank</errorMessage>
</ValidationRule>